--- a/src/app/admin/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/admin/admin-sidebar/admin-sidebar.component.html
@@ -121,7 +121,14 @@
         </ul>
       </div>
     </li>
-
+    <li class="nav-item d-lg-none">
+      <a class="nav-link" href="#" (click)="logout()">
+        <i class="material-icons">power_settings_new</i>
+        <p>
+          <span class="d-lg-none d-md-block">Logout</span>
+        </p>
+      </a>
+    </li>
   </ul>
 
 </div>
