--- a/src/assets/scss/plugins/_select-bootstrap.scss
+++ b/src/assets/scss/plugins/_select-bootstrap.scss
@@ -31,7 +31,7 @@
 }
 //
 .mat-pseudo-checkbox{
-    border: none !important;
+    // border: none !important;
     margin-top: 2px;
     float: right;
 }
