--- a/src/app/admin/crfs/crfs.component.html
+++ b/src/app/admin/crfs/crfs.component.html
@@ -41,8 +41,10 @@
                       <td>
                         <span *ngFor="let visit of form.visits">{{visit.description}}<br></span>
                       </td>
-                      <td><a routerLink="/admin/crf-details/{{form._id}}" mat-raised-button class="btn btn-primary btn-link" mat-min-fab mat-raised-button >
-                        <mat-icon>visibility</mat-icon></a> </td>
+                      <td><a routerLink="/admin/crf-details/{{form._id}}" mat-mini-fab color="primary" matTooltip="View Form" >
+                        <mat-icon>visibility</mat-icon></a> 
+                        <a routerLink="/admin/crf-edit/{{form._id}}" mat-mini-fab color="accent" matTooltip="Edit Form" ><mat-icon>edit</mat-icon></a> 
+                      </td>
                     </tr>
                   </tbody>
                 </table>
