--- a/src/app/admin/crf-detail/crf-detail.component.html
+++ b/src/app/admin/crf-detail/crf-detail.component.html
@@ -182,6 +182,7 @@
                   <!-- <button mat-button matStepperPrevious>Back</button> -->
                   <button class="btn btn-primary mat-raised-button" mat-raised-button (click)="onAddingField()" >Save</button>
                   <button class="btn btn-default mat-raised-button" mat-raised-button (click)="resetForm()" > Clear</button>
+                  <a routerLink="/admin/crfs" class="btn btn-warning mat-raised-button pull-right">Back to List</a>
                 </div>
               <!-- </mat-step>
 
