--- a/src/app/site/site/site.component.html
+++ b/src/app/site/site/site.component.html
@@ -65,7 +65,7 @@
             <img src="/assets/img/QdataEDC.png" style="width:190px; " >
             </a>
         </mat-toolbar>
-        <app-breadcrumb></app-breadcrumb>
+        <!-- <app-breadcrumb></app-breadcrumb> -->
     <router-outlet></router-outlet>
     <app-footer></app-footer>
   </mat-sidenav-content>
