--- a/src/app/site/patient-create/patient-create.component.html
+++ b/src/app/site/patient-create/patient-create.component.html
@@ -74,7 +74,7 @@
                     <app-field-error-display [displayError]="isFieldValid(frmRegister, 'icf')" errorMsg="Input is required"></app-field-error-display>
                   </div>
                 </div>
-                <div class="col-md-5 mr-auto">
+                <div class="col-md-5 mr-auto" >
                   <mat-form-field class="example-full-width">
                     <input matInput [matDatepicker]="ICFpicker" formControlName="icf_date" placeholder="ICF Date" [max]="getToday()"
                       (click)="ICFpicker.open()" required>
@@ -96,10 +96,11 @@
                   </tr>
                 </table>
                 </div>
+                {{frmRegister.errors }}
             </div>
             <div class="card-footer text-right">
               <div class="mr-auto"><a routerLink="/site/patients" class="btn btn-default">Cancel</a></div>
-              <button mat-raised-button type="submit" *ngIf="frmRegister.dirty" class="btn btn-rose" (click)="onRegister()">{{btnText}}</button>
+              <button mat-raised-button type="submit"  *ngIf="frmRegister.dirty" class="btn btn-rose" (click)="onRegister()">{{btnText}}</button>
             </div>
           </form>
         </div>
