--- a/src/app/site/patient-list/patient-list.component.html
+++ b/src/app/site/patient-list/patient-list.component.html
@@ -1,84 +1,87 @@
 <div class="main-content">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-10 offset-md-1">
-          <div class="card">
-            <div class="card-header card-header-icon card-header-rose">
-              <div class="card-icon">
-                <i class="material-icons">assignment_ind</i>
-              </div>
-              <h4 class="card-title ">Enrolled Patients
-              <span class="pull-right">
-                <a [routerLink]="['/site/patient/new']" class="btn btn-primary " mat-raised-button type="button" >
-                  <i class="material-icons">add_box</i>Add</a></span></h4>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-10 offset-md-1">
+        <div class="card">
+          <div class="card-header card-header-icon card-header-rose">
+            <div class="card-icon">
+              <i class="material-icons">assignment_ind</i>
             </div>
-            <div class="card-body ">
-              <div class="table-responsive mat-elevation-z8">
-                <table mat-table [dataSource]="dataSource" class="table ">
-                  <ng-container matColumnDef="patid">
-                    <th mat-header-cell *matHeaderCellDef> Patient ID </th>
-                    <td mat-cell *matCellDef="let patient"> {{getRefNumber(patient.pat_id, patient.prefix)}} </td>
-                  </ng-container>
-                  <ng-container matColumnDef="initials">
-                    <th mat-header-cell *matHeaderCellDef> Initials</th>
-                    <td mat-cell *matCellDef="let patient"> {{patient.initials}} </td>
-                  </ng-container>
-                  <ng-container matColumnDef="dob">
-                      <th mat-header-cell *matHeaderCellDef> Date of Birth</th>
-                      <td mat-cell *matCellDef="let patient"> {{patient.dob | date}} </td>
-                    </ng-container>
-                    <ng-container matColumnDef="enrollment">
-                        <th mat-header-cell *matHeaderCellDef>Enrollment Date</th>
-                        <td mat-cell *matCellDef="let patient"> {{patient.icf_date | date}} </td>
-                      </ng-container>
-                      <ng-container matColumnDef="actions">
-                          <th mat-header-cell *matHeaderCellDef class="text-right">Action</th>
-                          <td mat-cell class="td-actions text-right" *matCellDef="let patient">
-                            <!-- <a mat-raised-button type="button" class="btn btn-info ">
+            <h4 class="card-title ">
+              Enrolled Patients
+              <span class="pull-right">
+                <a
+                  [routerLink]="['/site/patient/new']"
+                  class="btn btn-primary "
+                  mat-raised-button
+                  type="button"
+                >
+                  <i class="material-icons">add_box</i>Add</a
+                ></span
+              >
+            </h4>
+          </div>
+          <div class="card-body ">
+            <div class="table-responsive mat-elevation-z8">
+              <table mat-table [dataSource]="dataSource" class="table ">
+                <ng-container matColumnDef="patid">
+                  <th mat-header-cell *matHeaderCellDef>Patient ID</th>
+                  <td mat-cell *matCellDef="let patient">
+                    {{ getRefNumber(patient.pat_id, patient.prefix) }}
+                  </td>
+                </ng-container>
+                <ng-container matColumnDef="initials">
+                  <th mat-header-cell *matHeaderCellDef>Initials</th>
+                  <td mat-cell *matCellDef="let patient">
+                    {{ patient.initials }}
+                  </td>
+                </ng-container>
+                <ng-container matColumnDef="dob">
+                  <th mat-header-cell *matHeaderCellDef>Date of Birth</th>
+                  <td mat-cell *matCellDef="let patient">
+                    {{ patient.dob | date }}
+                  </td>
+                </ng-container>
+                <ng-container matColumnDef="enrollment">
+                  <th mat-header-cell *matHeaderCellDef>Enrollment Date</th>
+                  <td mat-cell *matCellDef="let patient">
+                    {{ patient.icf_date | date }}
+                  </td>
+                </ng-container>
+                <ng-container matColumnDef="actions">
+                  <th mat-header-cell *matHeaderCellDef class="text-right">
+                    Action
+                  </th>
+                  <td
+                    mat-cell
+                    class="td-actions text-right"
+                    *matCellDef="let patient"
+                  >
+                    <!-- <a mat-raised-button type="button" class="btn btn-info ">
                               <i class="material-icons">person</i>
                             </a> -->
-                          <a routerLink="/site/patient/{{patient._id}}" mat-raised-button type="button" class="btn btn-success " >
-                              <i class="material-icons">edit</i>
-                          </a> </td>
-                        </ng-container>
-                  <tr mat-header-row *matHeaderRowDef="displayedColumn"></tr>
-                  <tr mat-row *matRowDef="let row; columns: displayedColumn;"></tr>
+                    <a
+                      routerLink="/site/patient/{{ patient._id }}"
+                      mat-raised-button
+                      type="button"
+                      class="btn btn-success "
+                    >
+                      <i class="material-icons">edit</i>
+                    </a>
+                  </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumn"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumn"></tr>
+              </table>
 
-                </table>
-                <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-                <!-- <table class="table table-hover">
-                  <thead class="text-primary">
-                    <tr><th>Patient ID</th>
-                      <th>Initials</th>
-                      <th>Date of Birth</th>
-                      <th>Enrollment Date</th>
-                      <th class="text-right">Actions</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr *ngFor="let patient of patients">
-                      <td>{{getRefNumber(patient.pat_id, patient.prefix)}}</td>
-                      <td>{{patient.initials}}</td>
-                      <td>{{patient.dob | date}}</td>
-                      <td>{{patient.icf_date | date}}</td>
-                      <td class="td-actions text-right">
-                        <a mat-raised-button type="button" class="btn btn-info ">
-                          <i class="material-icons">person</i>
-                        </a>
-                      <a href="/site/patient/{{patient._id}}" mat-raised-button type="button" class="btn btn-success " >
-                          <i class="material-icons">edit</i>
-                      </a>
-                      <button mat-raised-button type="button" class="btn btn-danger">
-                          <i class="material-icons">close</i>
-                      </button>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table> -->
-              </div>
+              <mat-paginator
+                [pageSizeOptions]="[5, 10, 20]"
+                showFirstLastButtons
+              ></mat-paginator>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
