--- a/src/app/site/site-dashboard/site-dashboard.component.html
+++ b/src/app/site/site-dashboard/site-dashboard.component.html
@@ -1,6 +1,7 @@
 <div class="main-content">
     <div class="container-fluid">
       <br/>
+      
       <div class="row" *ngIf="studyName">
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="card card-stats">
@@ -10,6 +11,9 @@
               </div>
               <p class="card-category">Enrolled Patients</p>
               <h3 class="card-title">{{patientCount}}</h3>
+            </div>
+            <div class="card-body">
+              
             </div>
             <div class="card-footer">
               <div class="stats">
