--- a/src/app/site/patient-list/patient-list.component.html
+++ b/src/app/site/patient-list/patient-list.component.html
@@ -5,7 +5,7 @@
       <div class="row">
         <div>
           <mat-chip-list>
-            <mat-chip color="primary" [routerLink]="['/site/dashboard']"><mat-icon>home</mat-icon> Home</mat-chip>
+            <mat-chip color="primary" [routerLink]="['/site/dashboard']"><mat-icon>dashboard</mat-icon> Dashboard</mat-chip>
             <mat-chip color="primary" selected><mat-icon>assignment_ind</mat-icon> Patients</mat-chip>
           </mat-chip-list>
         </div>
