--- a/src/app/site/patient-create/patient-create.component.html
+++ b/src/app/site/patient-create/patient-create.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div>
         <mat-chip-list>
-          <mat-chip color="primary" [routerLink]="['/site/dashboard']"><mat-icon>home</mat-icon> Home</mat-chip>
+          <mat-chip color="primary" [routerLink]="['/site/dashboard']"><mat-icon>dashboard</mat-icon> Dashboard</mat-chip>
           <mat-chip color="primary" [routerLink]="['/site/patients']"><mat-icon>assignment_ind</mat-icon> Patients</mat-chip>
           <mat-chip color="primary" selected><mat-icon>edit</mat-icon> {{btnText}}</mat-chip>
         </mat-chip-list>
