--- a/src/app/site/site-dashboard/site-dashboard.component.html
+++ b/src/app/site/site-dashboard/site-dashboard.component.html
@@ -1,7 +1,14 @@
 <div class="main-content">
     <div class="container-fluid">
       <br/>
-      
+      <div class="row">
+          <div>
+            <mat-chip-list>
+              <mat-chip color="primary" selected><mat-icon>dashboard</mat-icon> Dashboard</mat-chip>
+              <mat-chip color="primary" [routerLink]="['/site/patients']"><mat-icon>assignment_ind</mat-icon> Patients</mat-chip>
+            </mat-chip-list>
+          </div>
+        </div>
       <div class="row" *ngIf="studyName">
         <div class="col-lg-4 col-md-6 col-sm-6">
           <div class="card card-stats">
@@ -34,7 +41,7 @@
                 <table mat-table [dataSource]="dataSource" class="table ">
                   <ng-container matColumnDef="patid">
                     <th mat-header-cell *matHeaderCellDef>Patient ID</th>
-                    <td mat-cell *matCellDef="let patient"> <mat-icon>person</mat-icon>
+                    <td mat-cell *matCellDef="let patient" class="text-left"> <mat-icon>person</mat-icon>
                       <span routerLink="/site/patient/{{ patient._id }}">
                           {{ getRefNumber(patient.pat_id, patient.prefix) }}
                       </span>
