--- a/src/app/site/patient-create/patient-create.component.html
+++ b/src/app/site/patient-create/patient-create.component.html
@@ -19,6 +19,7 @@
                 <i class="material-icons">create</i>
               </div>
               <h4 class="card-title">Patient Details {{btnText}}</h4>
+              <span class="text-right"><a routerLink="/site/visits/{{patID}}">Visits</a></span>
             </div>
             <div class="card-body">
               <br>
